criacao das regras, e da rota de autenticacao
