# src/infra/http/auth/validators.py
@@ -1,0 +1,11 @@
+login_validator = {
+    'email': {
+        'type': 'string',
+        'regex': '^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$',
+        'required': True
+    },
+    'password': {
+        'type': 'string',
+        'required': True
+    }
+}
